--- a/java.html
+++ b/java.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <ul>
-            <li>this is world 0452</li>
+            <li>this is world</li>
         </ul>
     </div>
 </body>
